<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical"
             android:id="@+id/metronome"
             tools:context="com.cs3270.robbie.cs3270fi.Metronome"
              android:background="#282828"
              android:padding="5dp">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center_horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/beat"
                android:id="@+id/textView4"
                android:textColor="@color/colorText"
                android:layout_gravity="center_horizontal"
                android:textSize="18sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="1"
                android:id="@+id/txvBeat"
                android:layout_gravity="center_horizontal"
                android:textSize="25sp"
                android:textColor="@color/colorText"
                android:background="@color/colorButton"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center_horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tempo"
                android:id="@+id/textView"
                android:textColor="@color/colorText"
                android:layout_gravity="center_horizontal"
                android:textSize="18sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="120"
                android:id="@+id/txvTempo"
                android:textColor="@color/colorText"
                android:textSize="40sp"
                android:textStyle="bold"
                android:textAlignment="center"
                android:layout_gravity="center_horizontal"/>

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center_horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/style"
                android:id="@+id/textView3"
                android:textColor="@color/colorText"
                android:layout_gravity="center_horizontal"
                android:textSize="18sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="4"
                android:id="@+id/txvStyle"
                android:layout_gravity="center_horizontal"
                android:textSize="25sp"
                android:textColor="@color/colorText"
                android:background="@color/colorButton"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_gravity="center_horizontal"
        android:weightSum="1"
        android:paddingTop="5dp"
        android:paddingBottom="5dp">

        <SeekBar
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/skbTempo"
            android:layout_weight="1"
            android:layout_gravity="center_vertical"
            android:max="255"
            android:indeterminate="false"/>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/minus"
            android:id="@+id/btnMinus"
            android:layout_gravity="center_horizontal"
            android:background="@color/colorButton"
            android:textColor="@color/colorText"
            android:singleLine="false"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=" "
            android:id="@+id/textView10"/>

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/colorButton"
            android:text="@string/tap"
            android:id="@+id/btnTap"
            android:textColor="@color/colorText"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=" "
            android:id="@+id/textView11"/>

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/plus"
            android:id="@+id/btnPlus"
            android:layout_gravity="center_horizontal"
            android:background="@color/colorButton"
            android:textColor="@color/colorText"/>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/accent"
            android:id="@+id/textView2"
            android:textSize="16sp"
            android:textColor="@color/colorText"/>

        <SeekBar
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/skbAccent"
            android:layout_weight="5"
            android:layout_gravity="center_vertical"
            android:max="100"
            android:indeterminate="false"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/beat"
            android:id="@+id/textView5"
            android:textSize="16sp"
            android:textColor="@color/colorText"/>

        <SeekBar
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/skbBeat"
            android:layout_weight="5"
            android:layout_gravity="center_vertical"
            android:max="100"
            android:indeterminate="false"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/eight"
            android:id="@+id/textView6"
            android:textSize="16sp"
            android:textColor="@color/colorText"/>

        <SeekBar
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/skbEighth"
            android:layout_weight="5"
            android:layout_gravity="center_vertical"
            android:max="100"
            android:indeterminate="false"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/sixteen"
            android:id="@+id/textView7"
            android:textSize="16sp"
            android:textColor="@color/colorText"
            />

        <SeekBar
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/skbSixteenth"
            android:layout_weight="5"
            android:layout_gravity="center_vertical"
            android:max="100"
            android:indeterminate="false"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/triplet"
            android:id="@+id/textView8"
            android:textSize="16sp"
            android:textColor="@color/colorText"/>

        <SeekBar
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/skbTriplet"
            android:layout_weight="5"
            android:layout_gravity="center_vertical"
            android:max="100"
            android:indeterminate="false"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/memory"
            android:id="@+id/tvxMemLabel"
            android:textColor="@color/colorText"
            android:layout_gravity="center_horizontal"
            android:textSize="16sp"
            android:paddingRight="10dp"/>

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/previous"
            android:id="@+id/btnMemPrev"
            android:textColor="@color/colorText"
            android:background="@color/colorButton"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="4"
            android:id="@+id/txvMemory"
            android:layout_gravity="center_horizontal"
            android:textSize="25sp"
            android:textColor="@color/colorText"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"/>

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/next"
            android:id="@+id/btnMemNext"
            android:textColor="@color/colorText"
            android:background="@color/colorButton"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=" "
            android:id="@+id/textView12"/>

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:id="@+id/btnMemSave"
            android:textColor="@color/colorText"
            android:background="@color/colorButton"/>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/master"
            android:id="@+id/textView9"
            android:textSize="16sp"
            android:textColor="@color/colorText"
            android:layout_gravity="center_vertical"/>

        <SeekBar
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/skbMVolume"
            android:layout_weight="5"
            android:layout_gravity="center_vertical"
            android:max="100"
            android:indeterminate="false"/>

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/mute"
            android:id="@+id/btnMute"
            android:layout_gravity="center_horizontal"
            android:background="@color/colorButton"
            android:textColor="@color/colorText"/>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/startstop"
            android:id="@+id/btnStartStop"
            android:layout_gravity="center_horizontal"
            android:background="@color/colorButton"
            android:textColor="@color/colorText"/>
    </LinearLayout>

</LinearLayout>
